removed unused string

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,6 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, itaque necessitatibus magni eius blanditiis a voluptas laudantium vel voluptatum delectus officia obcaecati, numquam dicta, error minima minus aut ipsa. Laborum?</p>
+    <p>consectetur adipisicing elit. Dignissimos, itaque necessitatibus magni eius blanditiis a voluptas laudantium vel voluptatum delectus officia obcaecati, numquam dicta, error minima minus aut ipsa. Laborum?</p>
 </body>
 </html>
