new line of code

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <p>consectetur adipisicing elit. Dignissimos, itaque necessitatibus magni eius blanditiis a voluptas laudantium vel voluptatum delectus officia obcaecati, numquam dicta, error minima minus aut ipsa. Laborum?</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem id, quam ea nisi sapiente reiciendis? Delectus voluptates, laudantium eius consequuntur id error minus ipsam sit accusantium dolor consequatur tenetur aut!</p>
 </body>
 </html>
